# statistics-service

./: docker-compose.yaml
.github/workflows/: main.yml
statistics_service/: pyproject.toml
statistics_service/src/: abstract.py  celery.py  config.py  consumer.py  database.py  exceptions_handlers.py  main.py  repository.py
statistics_service/src/pages/: dependencies.py  exceptions.py  repository.py  router.py  service.py  shemas.py  utils.py
